# RTGS-AI-Analyst

./: .gitignore  README.md  cli.py  config.py  example_usage.py  main.py  pyproject.toml  requirements.txt  run_tests.py  utils.py
agents/: __init__.py  analysis_agent.py  cleaning_agent.py  ingestion_agent.py  inspection_agent.py  inspector_agent.py  report_agent.py  transformation_agent.py  transforming_agent.py  verification_agent.py  visualization_agent.py
data/processed/: cleaned_dataset_20250907_152209.csv  cleaned_dataset_20250907_152611.csv  cleaned_dataset_20250908_180012.csv  cleaned_dataset_20250908_180641.csv  final_dataset.csv  original_dataset_20250906_230830.csv  original_dataset_20250908_180012.csv  original_dataset_20250908_180641.csv
data/raw/: agricultural_2019_5.csv  bank_branches.csv  sales_license_2018_01.csv
outputs/: insights.md
