[project]
name = "rtgs-ai-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "click>=8.1.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
]
