[project]
name = "rtgs-ai-analyst"
version = "0.1.0"
description = "RTGS-AI-Analyst is an intelligent system that automates end-to-end data quality analysis, cleaning, transformation, visualization and reporting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "click>=8.1.0",
    "inquirer>=3.1.0",
    "jinja2>=3.1.0",
    "kaleido>=0.2.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-experimental>=0.0.1",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "weasyprint>=60.0",
    "xlrd>=2.0.1",
]
